# greenflame

./: .clang-format  .clang-tidy  .clangd  .cspell.json  .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  app.manifest  app.manifest.in  greenflame.rc  greenflame.rc.in
.githooks/: pre-commit  pre-commit.bat  pre-commit.ps1
.github/workflows/: ci.yml  release.yml
docs/: annotation_tools.md  bubble_annotation_design.md  build.md  cli_annotation_design.md  cli_annotations.md  coverage.md  flow.dot  highlighter_opacity_wheel_design.md  manual_test_plan.md  obfuscate_risk_warning.md  obfuscate_tool.md  pinned_image_design.md  resource_processing.md  testing.md  text_annotation_design.md  text_style_wheel_redesign.md  wheel_keyboard_navigation.md
resources/: greenflame.rc.in
schemas/: greenflame.config.schema.json
scripts/: build_and_test_all.bat  coverage.ps1  test.cmd
src/greenflame/: app_config.cpp  app_config.h  app_config_store.cpp  app_config_store.h  console_output.cpp  console_output.h  greenflame_app.cpp  greenflame_app.h  main.cpp  pch.h  win_min_fwd.h
src/greenflame/win/: about_dialog.cpp  about_dialog.h  config.cpp  config.h  cursor.cpp  cursor.h  d2d_overlay_resources.cpp  d2d_overlay_resources.h  d2d_paint.cpp  d2d_paint.h  d2d_text_layout_engine.cpp  d2d_text_layout_engine.h  display_queries.cpp  display_queries.h  dpi.cpp  dpi.h  gdi_capture.cpp  gdi_capture.h  monitors_win.cpp  monitors_win.h  overlay_button.cpp  overlay_button.h  overlay_help_overlay.cpp  overlay_help_overlay.h  overlay_paint.cpp  overlay_paint.h  overlay_panel_chrome.cpp  overlay_panel_chrome.h  overlay_top_layer.h  overlay_warning_dialog.cpp  overlay_warning_dialog.h  overlay_window.cpp  overlay_window.h  pinned_image_manager.cpp  pinned_image_manager.h  pinned_image_window.cpp  pinned_image_window.h  save_image.cpp  save_image.h  startup_launch.cpp  (+15 more)
src/greenflame_core/: annotation_commands.cpp  annotation_commands.h  annotation_controller.cpp  annotation_controller.h  annotation_edit_interaction.cpp  annotation_edit_interaction.h  annotation_hit_test.cpp  annotation_hit_test.h  annotation_raster.cpp  annotation_raster.h  annotation_tool.h  annotation_tool_registry.cpp  annotation_tool_registry.h  annotation_types.h  app_config.cpp  app_config.h  app_config_json.cpp  app_config_json.h  app_controller.cpp  app_controller.h  app_services.h  bmp.cpp  bmp.h  bubble_annotation_tool.cpp  bubble_annotation_tool.h  bubble_annotation_types.cpp  cli_annotation_import.cpp  cli_options.cpp  cli_options.h  color_wheel.cpp  color_wheel.h  freehand_annotation_tool.cpp  freehand_annotation_tool.h  freehand_smoothing.cpp  freehand_smoothing.h  line_annotation_tool.cpp  monitor_rules.cpp  monitor_rules.h  obfuscate_risk_warning.h  output_path.cpp  (+36 more)
tests/: .clang-tidy  CMakeLists.txt  annotation_controller_tests.cpp  annotation_edit_interaction_tests.cpp  annotation_hit_test_tests.cpp  annotation_raster_tests.cpp  annotation_tool_tests.cpp  app_config_tests.cpp  app_controller_tests.cpp  bmp_tests.cpp  bubble_annotation_tests.cpp  cli_annotation_import_tests.cpp  cli_options_tests.cpp  color_wheel_tests.cpp  dpi_scale_tests.cpp  fake_spell_check_service.h  fake_text_layout_engine.h  freehand_smoothing_tests.cpp  geometry_tests.cpp  monitor_policy_tests.cpp  output_path_tests.cpp  overlay_controller_tests.cpp  pch.h  pixel_ops_tests.cpp  rect_from_points_tests.cpp  save_image_policy_tests.cpp  selection_handles_tests.cpp  selection_wheel_tests.cpp  snap_edge_builder_tests.cpp  snap_to_edges_tests.cpp  spell_check_tests.cpp  string_utils_tests.cpp  text_draft_buffer_tests.cpp  text_html_tests.cpp  text_rtf_tests.cpp  toolbar_placement_tests.cpp  virtual_screen_rect_tests.cpp  window_filter_tests.cpp
