cmake_minimum_required(VERSION 3.26)
project(greenflame VERSION 0.9.0 LANGUAGES CXX)

# So the IDE (and clangd) can find includes for all targets, including tests.
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

option(GREENFLAME_ENABLE_TIME_TRACE
    "Emit Clang -ftime-trace JSON files during compilation"
    OFF
)

# cmake-scripts (pulled by Catch2/CPM) sets CMAKE_COMPILE_WARNING_AS_ERROR=ON
# which adds /WX globally, breaking builds on warnings in third-party headers.
# We control warnings per-target already, so disable it.
set(CMAKE_COMPILE_WARNING_AS_ERROR OFF)

# Keep the app as a GUI subsystem executable on Windows.
set(CMAKE_WIN32_EXECUTABLE ON)

# -----------------------------
# Version and metadata (single source of truth)
# -----------------------------
set(GREENFLAME_VERSION_TWEAK 1 CACHE STRING "Fourth version component for Windows resources")
set(GREENFLAME_FILE_VERSION_COMMA
    "${PROJECT_VERSION_MAJOR},${PROJECT_VERSION_MINOR},${PROJECT_VERSION_PATCH},${GREENFLAME_VERSION_TWEAK}"
)
set(GREENFLAME_FILE_VERSION_DOTTED
    "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}.${GREENFLAME_VERSION_TWEAK}"
)
set(GREENFLAME_PRODUCT_VERSION
    "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}"
    CACHE STRING "Human-readable product version string (e.g. 0.8.0-rc1); overridden by CI"
)

set(GREENFLAME_COMPANY_NAME "Jocelyn Legault" CACHE STRING "Company name in VERSIONINFO")
set(GREENFLAME_PRODUCT_NAME "Greenflame" CACHE STRING "Product name in VERSIONINFO")
set(GREENFLAME_FILE_DESCRIPTION "Greenflame Screenshot Tool" CACHE STRING "File description in VERSIONINFO")
set(GREENFLAME_COPYRIGHT "Copyright (C) 2026 Jocelyn Legault" CACHE STRING "Copyright in VERSIONINFO")
set(GREENFLAME_INTERNAL_NAME "greenflame.exe" CACHE STRING "InternalName in VERSIONINFO")
set(GREENFLAME_ORIGINAL_FILENAME "greenflame.exe" CACHE STRING "OriginalFilename in VERSIONINFO")
set(GREENFLAME_MANIFEST_NAME "greenflame" CACHE STRING "Manifest assemblyIdentity name")
set(GREENFLAME_ICON_PATH "${CMAKE_CURRENT_SOURCE_DIR}/resources/greenflame.ico")
file(TO_CMAKE_PATH "${GREENFLAME_ICON_PATH}" GREENFLAME_ICON_PATH)
set(GREENFLAME_FREEHAND_CURSOR_PATH
    "${CMAKE_CURRENT_SOURCE_DIR}/resources/small-crosshair.cur"
)
file(TO_CMAKE_PATH "${GREENFLAME_FREEHAND_CURSOR_PATH}"
     GREENFLAME_FREEHAND_CURSOR_PATH)
set(GREENFLAME_BRUSH_TOOL_GLYPH_PATH
    "${CMAKE_CURRENT_SOURCE_DIR}/resources/brush-mask.png"
)
file(TO_CMAKE_PATH "${GREENFLAME_BRUSH_TOOL_GLYPH_PATH}"
     GREENFLAME_BRUSH_TOOL_GLYPH_PATH)
set(GREENFLAME_HIGHLIGHTER_TOOL_GLYPH_PATH
    "${CMAKE_CURRENT_SOURCE_DIR}/resources/highlighter-mask.png"
)
file(TO_CMAKE_PATH "${GREENFLAME_HIGHLIGHTER_TOOL_GLYPH_PATH}"
     GREENFLAME_HIGHLIGHTER_TOOL_GLYPH_PATH)
set(GREENFLAME_LINE_TOOL_GLYPH_PATH
    "${CMAKE_CURRENT_SOURCE_DIR}/resources/line-mask.png"
)
file(TO_CMAKE_PATH "${GREENFLAME_LINE_TOOL_GLYPH_PATH}"
     GREENFLAME_LINE_TOOL_GLYPH_PATH)
set(GREENFLAME_ARROW_TOOL_GLYPH_PATH
    "${CMAKE_CURRENT_SOURCE_DIR}/resources/arrow-mask.png"
)
file(TO_CMAKE_PATH "${GREENFLAME_ARROW_TOOL_GLYPH_PATH}"
     GREENFLAME_ARROW_TOOL_GLYPH_PATH)
set(GREENFLAME_RECTANGLE_TOOL_GLYPH_PATH
    "${CMAKE_CURRENT_SOURCE_DIR}/resources/rectangle-mask.png"
)
file(TO_CMAKE_PATH "${GREENFLAME_RECTANGLE_TOOL_GLYPH_PATH}"
     GREENFLAME_RECTANGLE_TOOL_GLYPH_PATH)
set(GREENFLAME_FILLED_RECTANGLE_TOOL_GLYPH_PATH
    "${CMAKE_CURRENT_SOURCE_DIR}/resources/filled_rectangle-mask.png"
)
file(TO_CMAKE_PATH "${GREENFLAME_FILLED_RECTANGLE_TOOL_GLYPH_PATH}"
     GREENFLAME_FILLED_RECTANGLE_TOOL_GLYPH_PATH)
set(GREENFLAME_ELLIPSE_TOOL_GLYPH_PATH
    "${CMAKE_CURRENT_SOURCE_DIR}/resources/ellipse-mask.png"
)
file(TO_CMAKE_PATH "${GREENFLAME_ELLIPSE_TOOL_GLYPH_PATH}"
     GREENFLAME_ELLIPSE_TOOL_GLYPH_PATH)
set(GREENFLAME_FILLED_ELLIPSE_TOOL_GLYPH_PATH
    "${CMAKE_CURRENT_SOURCE_DIR}/resources/filled_ellipse-mask.png"
)
file(TO_CMAKE_PATH "${GREENFLAME_FILLED_ELLIPSE_TOOL_GLYPH_PATH}"
     GREENFLAME_FILLED_ELLIPSE_TOOL_GLYPH_PATH)
set(GREENFLAME_OBFUSCATE_TOOL_GLYPH_PATH
    "${CMAKE_CURRENT_SOURCE_DIR}/resources/obfuscate-mask.png"
)
file(TO_CMAKE_PATH "${GREENFLAME_OBFUSCATE_TOOL_GLYPH_PATH}"
     GREENFLAME_OBFUSCATE_TOOL_GLYPH_PATH)
set(GREENFLAME_TEXT_TOOL_GLYPH_PATH
    "${CMAKE_CURRENT_SOURCE_DIR}/resources/text-mask.png"
)
file(TO_CMAKE_PATH "${GREENFLAME_TEXT_TOOL_GLYPH_PATH}"
     GREENFLAME_TEXT_TOOL_GLYPH_PATH)
set(GREENFLAME_HELP_TOOL_GLYPH_PATH
    "${CMAKE_CURRENT_SOURCE_DIR}/resources/help-mask.png"
)
file(TO_CMAKE_PATH "${GREENFLAME_HELP_TOOL_GLYPH_PATH}"
     GREENFLAME_HELP_TOOL_GLYPH_PATH)
set(GREENFLAME_BUBBLE_TOOL_GLYPH_PATH
    "${CMAKE_CURRENT_SOURCE_DIR}/resources/bubble-mask.png"
)
file(TO_CMAKE_PATH "${GREENFLAME_BUBBLE_TOOL_GLYPH_PATH}"
     GREENFLAME_BUBBLE_TOOL_GLYPH_PATH)
set(GREENFLAME_CURSOR_TOOL_GLYPH_PATH
    "${CMAKE_CURRENT_SOURCE_DIR}/resources/cursor-mask.png"
)
file(TO_CMAKE_PATH "${GREENFLAME_CURSOR_TOOL_GLYPH_PATH}"
     GREENFLAME_CURSOR_TOOL_GLYPH_PATH)
set(GREENFLAME_PIN_TOOL_GLYPH_PATH
    "${CMAKE_CURRENT_SOURCE_DIR}/resources/pin-mask.png"
)
file(TO_CMAKE_PATH "${GREENFLAME_PIN_TOOL_GLYPH_PATH}"
     GREENFLAME_PIN_TOOL_GLYPH_PATH)
configure_file(
    "${CMAKE_CURRENT_SOURCE_DIR}/app.manifest.in"
    "${CMAKE_CURRENT_BINARY_DIR}/app.manifest"
    @ONLY
)
configure_file(
    "${CMAKE_CURRENT_SOURCE_DIR}/resources/greenflame.rc.in"
    "${CMAKE_CURRENT_BINARY_DIR}/greenflame.rc"
    @ONLY
)
configure_file(
    "${CMAKE_CURRENT_SOURCE_DIR}/version_string.h.in"
    "${CMAKE_CURRENT_BINARY_DIR}/version_string.h"
    @ONLY
)

# -----------------------------
# greenflame_core (testable library)
# -----------------------------
add_library(greenflame_core STATIC
    src/greenflame_core/rect_px.cpp
    src/greenflame_core/rect_px.h
    src/greenflame_core/cli_options.cpp
    src/greenflame_core/cli_options.h
    src/greenflame_core/cli_annotation_import.cpp
    src/greenflame_core/cli_annotation_import.h
    src/greenflame_core/app_controller.cpp
    src/greenflame_core/app_controller.h
    src/greenflame_core/app_config.cpp
    src/greenflame_core/app_config.h
    src/greenflame_core/app_config_json.cpp
    src/greenflame_core/app_config_json.h
    src/greenflame_core/app_services.h
    src/greenflame_core/process_exit_code.h
    src/greenflame_core/window_capture_backend.h
    src/greenflame_core/monitor_rules.cpp
    src/greenflame_core/monitor_rules.h
    src/greenflame_core/pixel_ops.cpp
    src/greenflame_core/pixel_ops.h
    src/greenflame_core/bmp.cpp
    src/greenflame_core/bmp.h
    src/greenflame_core/selection_handles.cpp
    src/greenflame_core/selection_handles.h
    src/greenflame_core/snap_to_edges.cpp
    src/greenflame_core/snap_to_edges.h
    src/greenflame_core/snap_edge_builder.cpp
    src/greenflame_core/snap_edge_builder.h
    src/greenflame_core/save_image_policy.cpp
    src/greenflame_core/save_image_policy.h
    src/greenflame_core/string_utils.cpp
    src/greenflame_core/string_utils.h
    src/greenflame_core/window_filter.cpp
    src/greenflame_core/window_filter.h
    src/greenflame_core/window_query.h
    src/greenflame_core/output_path.cpp
    src/greenflame_core/output_path.h
    src/greenflame_core/annotation_commands.cpp
    src/greenflame_core/annotation_commands.h
    src/greenflame_core/annotation_controller.cpp
    src/greenflame_core/annotation_controller.h
    src/greenflame_core/annotation_edit_interaction.cpp
    src/greenflame_core/annotation_edit_interaction.h
    src/greenflame_core/annotation_hit_test.cpp
    src/greenflame_core/annotation_hit_test.h
    src/greenflame_core/annotation_types.h
    src/greenflame_core/annotation_tool.h
    src/greenflame_core/obfuscate_annotation_types.h
    src/greenflame_core/obfuscate_raster.cpp
    src/greenflame_core/obfuscate_raster.h
    src/greenflame_core/text_annotation_types.h
    src/greenflame_core/text_layout_engine.h
    src/greenflame_core/text_edit_controller.cpp
    src/greenflame_core/text_edit_controller.h
    src/greenflame_core/text_html.cpp
    src/greenflame_core/text_html.h
    src/greenflame_core/text_rtf.cpp
    src/greenflame_core/text_rtf.h
    src/greenflame_core/text_annotation_tool.cpp
    src/greenflame_core/text_annotation_tool.h
    src/greenflame_core/bubble_annotation_types.cpp
    src/greenflame_core/bubble_annotation_types.h
    src/greenflame_core/bubble_annotation_tool.cpp
    src/greenflame_core/bubble_annotation_tool.h
    src/greenflame_core/freehand_annotation_tool.cpp
    src/greenflame_core/freehand_annotation_tool.h
    src/greenflame_core/freehand_smoothing.cpp
    src/greenflame_core/freehand_smoothing.h
    src/greenflame_core/line_annotation_tool.cpp
    src/greenflame_core/line_annotation_tool.h
    src/greenflame_core/obfuscate_annotation_tool.cpp
    src/greenflame_core/obfuscate_annotation_tool.h
    src/greenflame_core/ellipse_annotation_tool.cpp
    src/greenflame_core/ellipse_annotation_tool.h
    src/greenflame_core/rectangle_annotation_tool.cpp
    src/greenflame_core/rectangle_annotation_tool.h
    src/greenflame_core/annotation_tool_registry.cpp
    src/greenflame_core/annotation_tool_registry.h
    src/greenflame_core/selection_wheel.cpp
    src/greenflame_core/selection_wheel.h
    src/greenflame_core/overlay_controller.cpp
    src/greenflame_core/overlay_controller.h
    src/greenflame_core/overlay_help_content.h
    src/greenflame_core/obfuscate_risk_warning.h
    src/greenflame_core/command.h
    src/greenflame_core/undo_stack.cpp
    src/greenflame_core/undo_stack.h
    src/greenflame_core/modification_command.h
    src/greenflame_core/toolbar_placement.h
    src/greenflame_core/toolbar_placement.cpp
)

# Allow includes like: #include "greenflame_core/rect_px.h"
target_include_directories(greenflame_core PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/src
)

target_compile_definitions(greenflame_core PRIVATE
    NOMINMAX
    WIN32_LEAN_AND_MEAN
    UNICODE
    _UNICODE
    $<$<CONFIG:Debug>:DEBUG>
)

target_precompile_headers(greenflame_core PRIVATE
    "$<$<COMPILE_LANGUAGE:CXX>:${CMAKE_CURRENT_SOURCE_DIR}/src/greenflame_core/pch.h>"
)

target_link_libraries(greenflame_core PRIVATE
    easyjson
)

if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    target_compile_options(greenflame_core PRIVATE
        -Wall
        -Wextra
        -Wpedantic
        -Werror
        -Wno-c++98-compat
        -Wno-c++98-compat-pedantic
        -Wno-pre-c++14-compat
        -Wno-pre-c++17-compat
        -Wno-pre-c++20-compat
        -Wno-implicit-int-float-conversion
        -Wno-switch-default
        -Wno-language-extension-token
    )
    if(GREENFLAME_ENABLE_TIME_TRACE)
        target_compile_options(greenflame_core PRIVATE -ftime-trace)
    endif()
elseif(MSVC)
    target_compile_options(greenflame_core PRIVATE
        /Wall
        /WX
        /wd4355 # 'this': used in base member initializer list
        /wd4514 # 'function' : unreferenced inline function has been removed
        /wd4710 # 'function' : function not inlined
        /wd4711 # 'function' : function selected for automatic inline expansion
        /wd4820 # 'bytes' bytes padding added after construct 'member_name'
        /wd5045 # Compiler will insert Spectre mitigation for memory load if /Qspectre switch specified
        /external:W0
        /external:anglebrackets
        /permissive-
        /Zc:__cplusplus
    )
else()
    target_compile_options(greenflame_core PRIVATE -Wall -Wextra -Wpedantic -Werror)
endif()

# -----------------------------
# Tests
# -----------------------------
include(CTest)
if(BUILD_TESTING)
    add_subdirectory(tests)
endif()

# -----------------------------
# easyjson (header-only JSON)
# -----------------------------
include(FetchContent)
FetchContent_Declare(
    easyjson
    GIT_REPOSITORY https://github.com/jahan-addison/easyjson.git
    GIT_TAG        v1.2.1
    GIT_SHALLOW    TRUE
)
FetchContent_MakeAvailable(easyjson)

# -----------------------------
# greenflame (Win32 GUI app)
# -----------------------------
add_executable(greenflame WIN32
    src/greenflame/main.cpp
    src/greenflame/console_output.cpp
    src/greenflame/console_output.h
    src/greenflame/greenflame_app.cpp
    src/greenflame/greenflame_app.h
    src/greenflame/app_config_store.cpp
    src/greenflame/app_config_store.h
    src/greenflame/win/display_queries.cpp
    src/greenflame/win/display_queries.h
    src/greenflame/win/gdi_capture.cpp
    src/greenflame/win/gdi_capture.h
    src/greenflame/win/save_image.cpp
    src/greenflame/win/wgc_window_capture.cpp
    src/greenflame/win/wgc_window_capture.h
    src/greenflame/win/annotation_capture_renderer.h
    src/greenflame/win/annotation_capture_renderer.cpp
    src/greenflame/win/overlay_help_overlay.cpp
    src/greenflame/win/overlay_help_overlay.h
    src/greenflame/win/overlay_panel_chrome.cpp
    src/greenflame/win/overlay_panel_chrome.h
    src/greenflame/win/overlay_top_layer.h
    src/greenflame/win/overlay_warning_dialog.cpp
    src/greenflame/win/overlay_warning_dialog.h
    src/greenflame/win/overlay_window.cpp
    src/greenflame/win/overlay_window.h
    src/greenflame/win/pinned_image_window.cpp
    src/greenflame/win/pinned_image_window.h
    src/greenflame/win/pinned_image_manager.cpp
    src/greenflame/win/pinned_image_manager.h
    src/greenflame/win/about_dialog.cpp
    src/greenflame/win/about_dialog.h
    src/greenflame/win/startup_launch.cpp
    src/greenflame/win/startup_launch.h
    src/greenflame/win/tray_window.cpp
    src/greenflame/win/tray_window.h
    src/greenflame/win/window_query.cpp
    src/greenflame/win/window_query.h
    src/greenflame/win/win32_services.cpp
    src/greenflame/win/win32_services.h
    src/greenflame/win/overlay_button.h
    src/greenflame/win/overlay_button.cpp
    src/greenflame/win/d2d_overlay_resources.h
    src/greenflame/win/d2d_overlay_resources.cpp
    src/greenflame/win/d2d_text_layout_engine.h
    src/greenflame/win/d2d_text_layout_engine.cpp
    src/greenflame/win/d2d_annotation_draw.h
    src/greenflame/win/d2d_annotation_draw.cpp
    src/greenflame/win/d2d_draw_helpers.h
    src/greenflame/win/d2d_paint.h
    src/greenflame/win/d2d_paint.cpp
    ${CMAKE_CURRENT_BINARY_DIR}/app.manifest
    ${CMAKE_CURRENT_BINARY_DIR}/greenflame.rc
)

target_include_directories(greenflame PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/src
    ${CMAKE_CURRENT_SOURCE_DIR}/src/greenflame
    ${CMAKE_CURRENT_BINARY_DIR}
)

target_compile_definitions(greenflame PRIVATE
    NOMINMAX
    WIN32_LEAN_AND_MEAN
    UNICODE
    _UNICODE
    $<$<CONFIG:Debug>:DEBUG>
)

target_precompile_headers(greenflame PRIVATE
    "$<$<COMPILE_LANGUAGE:CXX>:${CMAKE_CURRENT_SOURCE_DIR}/src/greenflame/pch.h>"
)

if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    target_compile_options(greenflame PRIVATE
        -Wall
        -Wextra
        -Wpedantic
        -Werror
        -Wno-c++98-compat
        -Wno-c++98-compat-pedantic
        -Wno-pre-c++14-compat
        -Wno-pre-c++17-compat
        -Wno-pre-c++20-compat
        -Wno-implicit-int-float-conversion
        -Wno-switch-default
        -Wno-language-extension-token
    )
    if(GREENFLAME_ENABLE_TIME_TRACE)
        target_compile_options(greenflame PRIVATE -ftime-trace)
    endif()
elseif(MSVC)
    target_compile_options(greenflame PRIVATE
        /Wall
        /WX
        /wd4355 # 'this': used in base member initializer list
        /wd4514 # 'function' : unreferenced inline function has been removed
        /wd4710 # 'function' : function not inlined
        /wd4711 # 'function' : function selected for automatic inline expansion
        /wd4820 # 'bytes' bytes padding added after construct 'member_name'
        /wd5045 # Compiler will insert Spectre mitigation for memory load if /Qspectre switch specified
        /external:W0
        /external:anglebrackets
        /permissive-
        /Zc:__cplusplus
    )
else()
    target_compile_options(greenflame PRIVATE -Wall -Wextra -Wpedantic -Werror)
endif()

target_link_libraries(greenflame PRIVATE
    greenflame_core
    easyjson

    # Win32 basics
    user32
    gdi32
    shcore
    shell32
    advapi32
    dwmapi
    comdlg32
    Windowscodecs
    ole32
    gdiplus
    d2d1
    dwrite
    d3d11
    dxgi
    dxguid  # CLSID_D2D1ArithmeticComposite and other D2D effect GUIDs
    windowsapp
)

# -----------------------------
# Link-Time Optimization (release builds only)
# -----------------------------
if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    # Full LTO: TUs emit LLVM bitcode; lld-link merges and optimizes at link time.
    foreach(_lto_tgt greenflame_core greenflame)
        target_compile_options(${_lto_tgt} PRIVATE $<$<CONFIG:Release>:-flto=full>)
    endforeach()
    target_link_options(greenflame PRIVATE $<$<CONFIG:Release>:-flto=full>)
elseif(MSVC)
    # Whole Program Optimisation: /GL at compile time, /LTCG at link time.
    set_property(TARGET greenflame_core PROPERTY INTERPROCEDURAL_OPTIMIZATION_RELEASE TRUE)
    set_property(TARGET greenflame      PROPERTY INTERPROCEDURAL_OPTIMIZATION_RELEASE TRUE)
endif()
